--- a/rsc-indicacao-descricao-producao-academica.tex
+++ b/rsc-indicacao-descricao-producao-academica.tex
@@ -1,3 +1,3 @@
-\section{Indicação e descrição de produção acadêmica, técnico-científica, literária e/ou artística;}
+\section{Indicação e descrição de produção acadêmica, técnico-cientí\hyp{}fica, literária e/ou artística;}
 
 Nenhum item a ser considerado.
