--- a/rsc.tex
+++ b/rsc.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt,a4paper]{article}
 \usepackage[a4paper,bindingoffset=0in,%
             left=0.5in,right=0.5in,top=1in,bottom=2in,%
-            footskip=.25in]{geometry}
+            footskip=.5in]{geometry}
 \usepackage[brazil,english]{babel}
 %\usepackage[utf8]{inputenc}
 \usepackage[utf8x]{inputenc}
@@ -23,6 +23,12 @@
 \usepackage{etoolbox}
 \usepackage{pdfpages} % para incluir pdfs
 \usepackage{refcount}
+\usepackage{hyphenat}
+
+\hyphenation{t\'{e}-cni-co-ci-en-t\'{i}-fi-ca}
+
+\selectlanguage{brazil}
+\allowhyphens
 
 \cftsetpnumwidth{1.0cm}
 
@@ -50,7 +56,7 @@
 \fancyhead[LE,LO]{}
 \fancyhead[CE,CO]{}
 \fancyhead[RE,RO]{}
-\fancyhead[LE,LO]{\includegraphics[width=5cm]{logo_ifsudeste.jpg}\hfill\includegraphics[width=2cm]{brasao-brasil.png}\\{\large \textbf{FORMULÁRIOS RECONHECIMENTO DE SABERES E COMPETÊNCIAS – RSC}}}
+\fancyhead[LE,LO]{\includegraphics[width=5cm]{nao-editar/logo_ifsudeste.jpg}\hfill\includegraphics[width=2cm]{nao-editar/brasao-brasil.png}\\{\large \textbf{FORMULÁRIOS RECONHECIMENTO DE SABERES E COMPETÊNCIAS – RSC}}}
 \setlength\headheight{80pt}
 %\renewcommand{\headrulewidth}{0pt}
 %\renewcommand{\headrulewidth}{0.4pt}
@@ -67,7 +73,7 @@
 	\fancyhead[LE,LO]{}
 	\fancyhead[CE,CO]{}
 	\fancyhead[RE,RO]{}
-	\fancyhead[LE,LO]{\includegraphics[width=5cm]{logo_ifsudeste.jpg}\hfill\includegraphics[width=2cm]{brasao-brasil.png}\\{\large 					\textbf{FORMULÁRIOS RECONHECIMENTO DE SABERES E COMPETÊNCIAS – RSC}}}
+	\fancyhead[LE,LO]{\includegraphics[width=5cm]{nao-editar/logo_ifsudeste.jpg}\hfill\includegraphics[width=2cm]{nao-editar/brasao-brasil.png}\\{\large 					\textbf{FORMULÁRIOS RECONHECIMENTO DE SABERES E COMPETÊNCIAS – RSC}}}
 	\setlength\headheight{80pt}
 	%\renewcommand{\headrulewidth}{0pt}
 	%\renewcommand{\headrulewidth}{0.4pt}
@@ -76,41 +82,55 @@
 	\fancyfoot[R]{\@Rodape}
 }
 
+\newcommand\IndicacaoPontuacaoRSC[1]{\def\@IndicacaoPontuacaoRSC{#1}}
+
 % para o fancy funcionar na pagina com tableofcontents
 \fancypagestyle{plainpdf}{%
 	\fancyhf{}
+	\fancyhead[LE,LO]{}
+	\fancyhead[CE,CO]{}
+	\fancyhead[RE,RO]{}
+	\fancyhead[RE,RO]{\textbf{{\Large \@IndicacaoPontuacaoRSC}}}
 	\renewcommand{\headrulewidth}{0pt}
 	\fancyfoot{}
 	\fancyfoot[R]{\@Rodape}
+	%\setlength\headheight{0pt}
+	\newgeometry{bindingoffset=0in,left=0.5in,right=0.5in,top=1in,bottom=1in,footskip=1.45in}
+	%fancyhfoffset[E,O]{0pt}
 }
 
 \newcommand{\nada}{
 	{\color{white}NADA}
 }
 
+\newcommand{\incluirpdf}[3]{
+	\IndicacaoPontuacaoRSC{#2}
+	\includepdf[pages=#1, offset=0 -50, pagecommand={\thispagestyle{plainpdf}}]{#3}
+}
+
 \begin{document}
 
 \pagenumbering{roman} % bota a numeracao de pagina em romano
 
-\include{rsc-variaveis-funcoes}
+\include{nao-editar/rsc-variaveis-funcoes}
 
 \include{rsc-dados}% Não esqueça de preencher esse arquivo
 
-\include{rsc-anexo-i}
+\include{nao-editar/rsc-anexo-i}
 
-\include{rsc-anexo-ii}
+\include{nao-editar/rsc-anexo-ii}
 
-\include{rsc-sumario-processo}
+\include{nao-editar/rsc-sumario-processo}
 
 \label{antes-relatorio-descritivo}
-\include{rsc-relatorio-descritivo}
+\include{nao-editar/rsc-relatorio-descritivo}
 
 % Inicio conteudo relatorio descritivo
 \pagenumbering{arabic}
 \setcounter{page}{1}
 \Rodape{Relatório Descritivo \hfill \pageref{relatorio-descritivo}.\thepage}
 
-\include{rsc-relatorio-descritivo-sumario}
+\include{nao-editar/rsc-relatorio-descritivo-sumario}
 
 \include{rsc-descricao-itinerario-formacao-titulacao}
 
@@ -124,7 +144,7 @@
 
 \include{rsc-indicacao-titulos-premios-aprovacoes}
 
-\include{empty/antes-documentacao-probatoria-formacao}
+\include{nao-editar/empty/antes-documentacao-probatoria-formacao}
 
 \Rodape{\thepage}
 \pagenumbering{roman}
@@ -132,7 +152,7 @@
 % Fim conteudo relatorio descritivo
 
 
-\include{rsc-documentacao-probatoria-formacao}
+\include{nao-editar/rsc-documentacao-probatoria-formacao}
 
 % Inicio conteudo documentacao probatoria de formacao
 \pagenumbering{arabic}
@@ -141,9 +161,9 @@
 
 % \include com documentos probatorios da formacao
 
-%\includepdf[pages=-, pagecommand={\thispagestyle{plainpdf}}]{certificado.pdf}
+\include{rsc-documentacao-probatoria-formacao-comprovantes}
 
-\include{empty/antes-documentacao-probatoria-rsc-i}
+\include{nao-editar/empty/antes-documentacao-probatoria-rsc-i}
 
 \Rodape{\thepage}
 \pagenumbering{roman}
@@ -151,7 +171,7 @@
 % Fim conteudo documentacao probatoria de formacao
 
 
-\include{rsc-documentacao-probatoria-rsc-i}
+\include{nao-editar/rsc-documentacao-probatoria-rsc-i}
 
 % Inicio conteudo documentacao probatoria RSC-I
 \pagenumbering{arabic}
@@ -160,9 +180,9 @@
 
 % \include com documentacao probatorio do RSC-I
 
-%\includepdf[pages=-, pagecommand={\thispagestyle{plainpdf}}]{certificado.pdf}
+\include{rsc-documentacao-probatoria-rsc-i-comprovantes}
 
-\include{empty/antes-documentacao-probatoria-rsc-ii}
+\include{nao-editar/empty/antes-documentacao-probatoria-rsc-ii}
 
 \Rodape{\thepage}
 \pagenumbering{roman}
@@ -170,7 +190,7 @@
 % Fim conteudo documentacao probatoria RSC-I
 
 
-\include{rsc-documentacao-probatoria-rsc-ii}
+\include{nao-editar/rsc-documentacao-probatoria-rsc-ii}
 
 % Inicio conteudo documentacao probatoria RSC-II
 \pagenumbering{arabic}
@@ -179,9 +199,9 @@
 
 % \include com documentacao probatorio do RSC-II
 
-%\includepdf[pages=-, pagecommand={\thispagestyle{plainpdf}}]{certificado.pdf}
+\include{rsc-documentacao-probatoria-rsc-ii-comprovantes}
 
-\include{empty/antes-documentacao-probatoria-rsc-iii}
+\include{nao-editar/empty/antes-documentacao-probatoria-rsc-iii}
 
 \Rodape{\thepage}
 \pagenumbering{roman}
@@ -189,7 +209,7 @@
 % Fim conteudo documentacao probatoria RSC-II
 
 
-\include{rsc-documentacao-probatoria-rsc-iii}
+\include{nao-editar/rsc-documentacao-probatoria-rsc-iii}
 
 % Inicio conteudo documentacao probatoria RSC-III
 \pagenumbering{arabic}
@@ -198,9 +218,9 @@
 
 % \include com documentacao probatorio do RSC-III
 
-%\includepdf[pages=-, pagecommand={\thispagestyle{plainpdf}}]{certificado.pdf}
+\include{rsc-documentacao-probatoria-rsc-iii-comprovantes}
 
-\include{empty/fim-documento}
+\include{nao-editar/empty/fim-documento}
 
 \Rodape{\thepage}
 \pagenumbering{roman}
