--- a/rsc-documentacao-probatoria-rsc-i-comprovantes.tex
+++ b/rsc-documentacao-probatoria-rsc-i-comprovantes.tex
@@ -1,4 +1,4 @@
-% {-} numero ou numeros de paginas, '-' para todas
+% {-} numero ou numeros de paginas, '-' para incluir todas as páginas
 % {RSC I - 11} indicação da pontuação do RSC do comprovante
 % {certificado.pdf} caminho do pdf/jpg/etc do comprovante
 % \incluirpdf{-}{RSC I - 11}{certificado.pdf}
