--- a/rsc.tex
+++ b/rsc.tex
@@ -88,6 +88,10 @@
 	\renewcommand{\contentsname}%
 		{Sumário Relatório Descritivo}
 }
+\addto\captionsenglish{%
+	\renewcommand{\contentsname}%
+		{Sumário Relatório Descritivo}
+}
 
 \pagestyle{fancy}
 
