--- a/rsc-dados.tex
+++ b/rsc-dados.tex
@@ -28,7 +28,7 @@
 	\the\rscipontosi +
 	\the\rscipontosii +
 	\the\rscipontosiii +
-	\the\rscipontosvi +
+	\the\rscipontosiv +
 	\the\rscipontosv +
 	\the\rscipontosvi +
 	\the\rscipontosvii +
@@ -47,7 +47,7 @@
 	\the\rsciipontosi +
 	\the\rsciipontosii +
 	\the\rsciipontosiii +
-	\the\rsciipontosvi +
+	\the\rsciipontosiv +
 	\the\rsciipontosv +
 	\the\rsciipontosvi +
 	\the\rsciipontosvii
@@ -65,7 +65,7 @@
 	\the\rsciiipontosi +
 	\the\rsciiipontosii +
 	\the\rsciiipontosiii +
-	\the\rsciiipontosvi +
+	\the\rsciiipontosiv +
 	\the\rsciiipontosv +
 	\the\rsciiipontosvi +
 	\the\rsciiipontosvii
