add: parte para planilha

--- a/rsc.tex
+++ b/rsc.tex
@@ -109,6 +109,16 @@
 
 \include{nao-editar/rsc-sumario-processo}
 
+\include{nao-editar/empty/antes-planilha-simulacao}
+
+\pagenumbering{arabic}
+\setcounter{page}{1}
+\Rodape{iv.\thepage \space de iv.5}
+\include{planilha-simulacao}
+\Rodape{\thepage}
+\pagenumbering{roman}
+\setcounter{page}{5}
+
 \label{antes-relatorio-descritivo}
 \include{nao-editar/rsc-relatorio-descritivo}
 
