add: parte para planilha

--- a/rsc.tex
+++ b/rsc.tex
@@ -114,7 +114,7 @@
 \pagenumbering{arabic}
 \setcounter{page}{1}
 \Rodape{iv.\thepage \space de iv.5}
-\include{planilha-simulacao}
+\include{rsc-planilha-simulacao}
 \Rodape{\thepage}
 \pagenumbering{roman}
 \setcounter{page}{5}
