add: metodo para add box

--- a/nao-editar/rsc-variaveis-funcoes.tex
+++ b/nao-editar/rsc-variaveis-funcoes.tex
@@ -82,6 +82,17 @@
 \end{table}
 }
 
+% \addcaixa{}
+\newcommand{\addcaixa}[4]{
+	\begin{table}[ht]
+		\begin{tabular}{|c|}
+			\hline
+			#1
+			\hline
+		\end{tabular}
+	\end{table}
+}
+
 % define variaveis
 \newtoks\nomeservidor
 \newtoks\datanascimento
