--- a/rsc.tex
+++ b/rsc.tex
@@ -39,7 +39,7 @@
 \usepackage[a4paper,bindingoffset=0in,%
             left=0.5in,right=0.5in,top=1in,bottom=2in,%
             footskip=.5in]{geometry}
-\usepackage[brazil,english]{babel}
+\usepackage[brazil]{babel}
 %\usepackage[utf8]{inputenc}
 \usepackage[utf8x]{inputenc}
 \usepackage[T1]{fontenc}
@@ -88,10 +88,10 @@
 	\renewcommand{\contentsname}%
 		{Sumário Relatório Descritivo}
 }
-\addto\captionsenglish{%
-	\renewcommand{\contentsname}%
-		{Sumário Relatório Descritivo}
-}
+%\addto\captionsenglish{%
+%	\renewcommand{\contentsname}%
+%		{Sumário Relatório Descritivo}
+%}
 
 \pagestyle{fancy}
 
