--- a/nao-editar/rsc-variaveis-funcoes.tex
+++ b/nao-editar/rsc-variaveis-funcoes.tex
@@ -42,7 +42,7 @@
 	\fancyhead[CE,CO]{}
 	\fancyhead[RE,RO]{}
 	\fancyhead[RE,RO]{\textbf{{\Large \@IndicacaoPontuacaoRSC}}}
-	\renewcommand{\headrulewidth}{0pt}
+	%\renewcommand{\headrulewidth}{0pt}
 	\fancyfoot{}
 	\fancyfoot[R]{\@Rodape}
 	%\setlength\headheight{0pt}
