--- a/rsc-dados.tex
+++ b/rsc-dados.tex
@@ -11,7 +11,7 @@
 \tempoefetivoexercicio{N meses}
 \rscpretendida{3}
 \cpf{111.111.111-11}
-\instituicao{Instituto Federal de E\hyp{}ducação, Ciência e Tecnologia do Sudeste de Minas Gerais}
+\instituicao{Instituto Federal de Educação, Ciência e Tecnologia do Sudeste de Minas Gerais}
 \campus{Santos Dumont}
 
 % preenche os valores das pontuacoes
