--- a/rsc.tex
+++ b/rsc.tex
@@ -74,6 +74,18 @@
 %\renewcommand{\hlbox}[1]{#1}
 %% fim remove os highlight(hl) e riscado(st)
 % fim highlight
+% todo link:http://tex.stackexchange.com/questions/9796/how-to-add-todo-notes
+\usepackage{xargs}                      % Use more than one optional parameter in a new commands
+\usepackage[pdftex,dvipsnames]{xcolor}  % Coloured text etc.
+% 
+\usepackage{graphicx,rotating,booktabs} % pra usar tabela na vertical
+\usepackage[colorinlistoftodos,prependcaption,textsize=small]{todonotes}
+%\newcommandx{\todounsure}[2][1=]{\todo[linecolor=red,backgroundcolor=red!25,bordercolor=red,#1]{#2}}
+%\newcommandx{\todochange}[2][1=]{\todo[linecolor=blue,backgroundcolor=blue!25,bordercolor=blue,#1]{#2}}
+%\newcommandx{\todoinfo}[2][1=]{\todo[linecolor=OliveGreen,backgroundcolor=OliveGreen!25,bordercolor=OliveGreen,#1]{#2}}
+%\newcommandx{\todoimprovement}[2][1=]{\todo[linecolor=Plum,backgroundcolor=Plum!25,bordercolor=Plum,#1]{#2}}
+\newcommandx{\todothiswillnotshow}[2][1=]{\todo[disable,#1]{#2}}
+% fim todo
 
 \hyphenation{t\'{e}-cni-co-ci-en-t\'{i}-fi-ca}
 
