fix: funcao para ToDo

--- a/rsc.tex
+++ b/rsc.tex
@@ -45,8 +45,8 @@
 \usepackage[T1]{fontenc}
 \usepackage{lipsum}%% a garbage package you don't need except to create examples.
 \usepackage{fancyhdr}
-\usepackage{graphicx}
-\usepackage{xcolor}
+%\usepackage{graphicx}
+%\usepackage{xcolor}
 \usepackage{makecell}
 \usepackage{helvet}
 \renewcommand{\familydefault}{\sfdefault}
@@ -74,9 +74,10 @@
 %\renewcommand{\hlbox}[1]{#1}
 %% fim remove os highlight(hl) e riscado(st)
 % fim highlight
+\selectlanguage{brazil}
 % todo link:http://tex.stackexchange.com/questions/9796/how-to-add-todo-notes
 \usepackage{xargs}                      % Use more than one optional parameter in a new commands
-\usepackage[pdftex,dvipsnames]{xcolor}  % Coloured text etc.
+\usepackage{xcolor}  % Coloured text etc.
 % 
 \usepackage{graphicx,rotating,booktabs} % pra usar tabela na vertical
 \usepackage[colorinlistoftodos,prependcaption,textsize=small]{todonotes}
@@ -89,7 +90,6 @@
 
 \hyphenation{t\'{e}-cni-co-ci-en-t\'{i}-fi-ca}
 
-\selectlanguage{brazil}
 \allowhyphens
 
 \cftsetpnumwidth{1.0cm}
