fix: construcao da tabela de indicacao do certificado

--- a/nao-editar/rsc-variaveis-funcoes.tex
+++ b/nao-editar/rsc-variaveis-funcoes.tex
@@ -79,7 +79,7 @@
 
 % \addtabelaindicacaocomprovante{RSC III}{VII}{145}{ix - 30 a ix - 33}
 \newcommand{\addtabelaindicacaocomprovante}[4]{
-	\begin{table}[ht]
+	\begin{table}[H]
 	\begin{tabular}{|c|c|c|c|}
 		\hline
 		\hspace{0.1in}Referência\hspace{0.1in} & \hspace{0.2in}Diretriz\hspace{0.2in} & \hspace{0.2in}Critério\hspace{0.2in} & \makecell{Página(s) do(s) documentos(s) comprobatórios (s)}\\
