--- a/rsc.tex
+++ b/rsc.tex
@@ -61,6 +61,7 @@
 \usepackage{pdfpages} % para incluir pdfs
 \usepackage{refcount}
 \usepackage{hyphenat}
+\usepackage{float}
 % inicio highlight
 \usepackage{color,soul} % para usar hl (highlight)
 \soulregister\cite7
@@ -81,7 +82,7 @@
 % 
 \usepackage{graphicx,rotating,booktabs} % pra usar tabela na vertical
 \usepackage[colorinlistoftodos,prependcaption,textsize=small]{todonotes}
-%\newcommandx{\todounsure}[2][1=]{\todo[linecolor=red,backgroundcolor=red!25,bordercolor=red,#1]{#2}}
+\newcommandx{\todounsure}[2][1=]{\todo[linecolor=red,backgroundcolor=red!25,bordercolor=red,#1]{#2}}
 %\newcommandx{\todochange}[2][1=]{\todo[linecolor=blue,backgroundcolor=blue!25,bordercolor=blue,#1]{#2}}
 %\newcommandx{\todoinfo}[2][1=]{\todo[linecolor=OliveGreen,backgroundcolor=OliveGreen!25,bordercolor=OliveGreen,#1]{#2}}
 %\newcommandx{\todoimprovement}[2][1=]{\todo[linecolor=Plum,backgroundcolor=Plum!25,bordercolor=Plum,#1]{#2}}
