--- a/rsc-documentacao-probatoria-rsc-ii-comprovantes.tex
+++ b/rsc-documentacao-probatoria-rsc-ii-comprovantes.tex
@@ -1,4 +1,5 @@
 % {-} numero ou numeros de paginas, '-' para incluir todas as páginas
-% {RSC I - 11} indicação da pontuação do RSC do comprovante
+% {0} angulo do certificado, 0 para não alterar
+% {RSC II - 90} indicação da pontuação do RSC do comprovante
 % {certificado.pdf} caminho do pdf/jpg/etc do comprovante
-% \incluirpdf{-}{RSC I - 11}{certificado.pdf}
+% \incluirpdf{-}{0}{RSC II - 90}{certificado.pdf}
