--- a/rsc-planilha-simulacao.tex
+++ b/rsc-planilha-simulacao.tex
@@ -1,2 +1,6 @@
+% {-} numero ou numeros de paginas, '-' para incluir todas as páginas
+% {0} angulo do certificado, 0 para não alterar
+% {RSC I - 11} indicação da pontuação do RSC do comprovante
+% {certificado.pdf} caminho do pdf/jpg/etc do comprovante
+% \incluirpdf{-}{0}{\space}{planilha.pdf}
 % Adicione o pdf da planilha logo abaixo
-%\incluirpdf{3-7}{\space}{planilha.pdf}
