--- a/rsc-documentacao-probatoria-formacao-comprovantes.tex
+++ b/rsc-documentacao-probatoria-formacao-comprovantes.tex
@@ -1,4 +1,5 @@
-% {-} numero ou numeros de paginas, '-' para todas
-% {RSC I - 11} indicação da pontuação do RSC do comprovante
+% {-} numero ou numeros de paginas, '-' para incluir todas as páginas
+% {0} angulo do certificado, 0 para não alterar
+% {} indicação da pontuação do RSC do comprovante
 % {certificado.pdf} caminho do pdf/jpg/etc do comprovante
-% \incluirpdf{-}{RSC I - 11}{certificado.pdf}
+% \incluirpdf{-}{0}{}{certificado.pdf}
