add: arquivos sty para o caso do usuario nao ter um pacote instalado

--- a/rsc-descricao-atividades-prestacao-servico.tex
+++ b/rsc-descricao-atividades-prestacao-servico.tex
@@ -1,3 +1,4 @@
 \section{Descrição de atividades de prestação de serviços à comunidade;}
+%\section{Descri\c{c}\~{a}o de atividades de presta\c{c}\~{a}o de servi\c{c}os \`{a} comunidade;}
 
 Nenhum item a ser considerado.
