--- a/rsc-descricao-atuacao-docente.tex
+++ b/rsc-descricao-atuacao-docente.tex
@@ -1,3 +1,4 @@
 \section{Descrição da atuação docente (ensino, pesquisa, inovação e extensão);}
+%\section{Descri\c{c}\~{a}o da atua\c{c}\~{a}o docente (ensino, pesquisa, inova\c{c}\~{a}o e extens\~{a}o);}
 
 Nenhum item a ser considerado.
