--- a/rsc-descricao-itinerario-formacao-titulacao.tex
+++ b/rsc-descricao-itinerario-formacao-titulacao.tex
@@ -1,3 +1,4 @@
 \section{Descrição do itinerário de formação, aperfeiçoamento e titulação;}
+%\section{Descri\c{c}\~{a}o do itiner\'{a}rio de forma\c{c}\~{a}o, aperfei\c{c}oamento e titula\c{c}\~{a}o;}
 
 Nenhum item a ser considerado.
