--- a/rsc.tex
+++ b/rsc.tex
@@ -40,11 +40,11 @@
             left=0.5in,right=0.5in,top=1in,bottom=2in,%
             footskip=.5in]{geometry}
 \usepackage[brazil]{babel}
-\usepackage{iftex}
+\usepackage{sty/iftex}
 \ifPDFTeX
    \usepackage[utf8]{inputenc}
    \usepackage[T1]{fontenc}
-   \usepackage{lmodern}
+   \usepackage{sty/lmodern}
 \else
    \ifXeTeX
      \usepackage{fontspec}
