add: comando para remover os comentarios das paginas

--- a/nao-editar/rsc-documentacao-probatoria-formacao.tex
+++ b/nao-editar/rsc-documentacao-probatoria-formacao.tex
@@ -8,6 +8,8 @@
 	\end{LARGE}
 \end{center}
 
+\ifcomentarios
 \begin{center}
 	{\color{red}(somente diploma de graduação e o diploma que gerou sua atual RT)}
 \end{center}
+\fi
