--- a/nao-editar/rsc-documentacao-probatoria-rsc-i.tex
+++ b/nao-editar/rsc-documentacao-probatoria-rsc-i.tex
@@ -6,8 +6,10 @@
 	\end{LARGE}
 \end{center}
 
+\ifcomentarios
 \begin{center}
 	{\color{red}
 		( Cada documento comprobatório RSC deverá ter a indicação da característica de pontuação a que se se refere, por exemplo, no canto superior direito da folha escreva: RSC I – 11, assim o avaliador saberá que tal documento se refere à atuação como conferencista ou palestrante )
 	}
 \end{center}
+\fi
