--- a/nao-editar/rsc-documentacao-probatoria-rsc-ii.tex
+++ b/nao-editar/rsc-documentacao-probatoria-rsc-ii.tex
@@ -6,8 +6,10 @@
 	\end{LARGE}
 \end{center}
 
+\ifcomentarios
 \begin{center}
 	{\color{red}
 		( Cada documento comprobatório RSC deverá ter a indicação da característica de pontuação a que se se refere, por exemplo, no canto superior direito da folha escreva: RSC II – 58, assim o avaliador saberá que tal documento se refere à orientação ou coorientação  de TCC de cursos de graduação. )
 	}
 \end{center}
+\fi
