--- a/nao-editar/rsc-sumario-processo.tex
+++ b/nao-editar/rsc-sumario-processo.tex
@@ -26,6 +26,7 @@
 	\end{tabular}
 \end{table}
 
+\ifcomentarios
 {\color{red}
 ORIENTAÇÕES DE PREENCHIMENTO:
 \begin{enumerate}
@@ -39,3 +40,4 @@ ORIENTAÇÕES DE PREENCHIMENTO:
 	\item Após anexados os documentos, não se esqueça de preencher a numeração de página final referente a cada parte deste processo, no sumário do processo RSC (tabela acima – CAMPO PÁGINA FINAL).
 \end{enumerate}
 }
+\fi
