--- a/nao-editar/rsc-variaveis-funcoes.tex
+++ b/nao-editar/rsc-variaveis-funcoes.tex
@@ -143,3 +143,10 @@
 \newtoks\rsciiipontosvii
 \newtoks\rsciiipontostotal
 
+\newif\ifcomentarios
+\comentariostrue
+
+% removercomentarios
+\newcommand{\removercomentarios}{
+	\comentariosfalse
+}
