--- a/rsc-dados.tex
+++ b/rsc-dados.tex
@@ -14,6 +14,9 @@
 \instituicao{Instituto Federal de Educação, Ciência e Tecnologia do Sudeste de Minas Gerais}
 \campus{Santos Dumont}
 
+% Descomente essa linha quando terminar de preencher o formulário para remover os comentários nas capas das páginas de comprovantes.
+%\removercomentarios{}
+
 % preenche os valores das pontuacoes
 % RSC-I
 \rscipontosi{0.25}
