--- a/rsc-dados.tex
+++ b/rsc-dados.tex
@@ -13,6 +13,7 @@
 \cpf{111.111.111-11}
 \instituicao{Instituto Federal de Educação, Ciência e Tecnologia do Sudeste de Minas Gerais}
 \campus{Santos Dumont}
+\genero{masculino} % masculino ou feminino
 
 % Descomente essa linha quando terminar de preencher o formulário para remover os comentários nas capas das páginas de comprovantes.
 %\removercomentarios{}
