--- a/nao-editar/rsc-anexo-ii.tex
+++ b/nao-editar/rsc-anexo-ii.tex
@@ -9,7 +9,7 @@
 	%\begin{adjustwidth}{-0.18in}{}
 	\begin{tabular}{|l|}
 		\hline
-		\makebox[1\textwidth]{\makecell[l]{Nome do servidor\expandafter\ifstrequal\expandafter{\the\genero}{feminino}{(a)}{}:\\\the\nomeservidor} \hfill \makecell[l]{Data de Nascimento:\\\the\datanascimento}}\\
+		\makebox[1\textwidth]{\makecell[l]{Nome do servidor:\\\the\nomeservidor} \hfill \makecell[l]{Data de Nascimento:\\\the\datanascimento}}\\
 		\hline
 		\makebox[1\textwidth]{
 			\makecell[l]{SIAPE:\\\the\siape} \hfill \makecell[l]{Classe:\\\the\classe}
