fix: titulo das secoes

--- a/rsc-indicacao-descricao-producao-academica.tex
+++ b/rsc-indicacao-descricao-producao-academica.tex
@@ -1,4 +1,4 @@
-\section{Indicação e descrição de produção acadêmica, técnico-cientí\hyp{}fica, literária e/ou artística;}
+\section[Indicação e descrição de produção acadêmica, técnico-científica, literária e/ou artística]{Indicação e descrição de produção acadêmica, técnico-cientí\hyp{}fica, literária e/ou artística;}
 %\section{Indica\c{c}\~{a}o e descri\c{c}\~{a}o de produ\c{c}\~{a}o acad\^{e}mica, t\'{e}cnico-cient\'{i}\hyp{}fica, liter\'{a}ria e/ou art\'{i}stica;}
 
 Nenhum item a ser considerado.
