--- a/rsc-indicacao-titulos-premios-aprovacoes.tex
+++ b/rsc-indicacao-titulos-premios-aprovacoes.tex
@@ -1,4 +1,4 @@
-\section{Indicação de títulos, prêmios e/ou aprovações em concursos;}
+\section[Indicação de títulos, prêmios e/ou aprovações em concursos]{Indicação de títulos, prêmios e/ou aprovações em concursos;}
 %\section{Indica\c{c}\~{a}o de t\'{i}tulos, pr\^{e}mios e/ou aprova\c{c}\~{o}es em concursos;}
 
 Nenhum item a ser considerado.
