--- a/rsc-indicacao-descricao-atividade-administracao.tex
+++ b/rsc-indicacao-descricao-atividade-administracao.tex
@@ -1,4 +1,4 @@
-\section{Indicação e descrição de atividades de administração;}
+\section[Indicação e descrição de atividades de administração]{Indicação e descrição de atividades de administração;}
 %\section{Indica\c{c}\~{a}o e descri\c{c}\~{a}o de atividades de administra\c{c}\~{a}o;}
 
 Nenhum item a ser considerado.
